...

  @override
  ConsumerState<LoginPage> createState() => _LoginPageState();
}

class _LoginPageState extends ConsumerState<LoginPage> {
  static const Key accountFieldKey = Key('login.accountField');
  static const Key passwordFieldKey = Key('login.passwordField');
  static const Key submitButtonKey = Key('login.submitButton');

  final _formKey = GlobalKey<FormState>();
  final _accountController = TextEditingController();
  final _passwordController = TextEditingController();
  bool _obscurePassword = true;
  bool _isAndroidEmulator = false;
...
